Version 1.48:
	- Added a fix to prevent potential overflow in the hashtable code


Version 1.47: 9/18/10
	- Fixed several bugs in the linear algebra (thanks Serge
		Batalov and many mersenneforum testers)
	- Patches from Jayson King: tune some of the choices for NFS
		polynomial selection
	- Patches from Serge Batalov: fix some portability problems 
		dealing with the hodgepodge of zlib versions everybody
		has on their unix systems
	- Added a little optimization for Fermi GPUs
	- Patch from Brian Gladman: fix bad printf format string
	- Fixed other format string problems introduced in v1.46


Version 1.46: 7/31/10
	The polynomial selection work in this release has benefitted
	greatly from a week-long visit to Paul Zimmermann's CARAMEL group
	in Nancy, France

	The MPI changes in this release were made possible by generous
	support from a startup allocation of CPU time on the National
	Science Foundation's Teragrid system (TG-DMS100013), courtesy
       	of Greg Childers at Cal State Fullerton

	- NFS linear algebra changes:
		- Added MPI support to the linear algebra. Still a work in 
		  progress, but for large problems the speedup from using 
		  many nodes of a parallel system is just incredible
		- Added multithreading to the vector-vector operations
		- Patch from Serge Batalov: use larger structures to represent
		  matrix blocks; the larger blocks that are possible make
		  matrix multiplies run noticeably faster at the expense of
		  needing more memory to represent the matrix
		- Made the linear algebra use actual time measurements to
		  decide how often a checkpoint file gets written
	- NFS poly selection changes:
		- Added a high-performance root sieve for degree 6 problems
		- Allowed stage 1 and stage 2 to be run separately,
		  with stage 1 output saved to file and read back in stage 2
		- For large problems, added a global optimizer that runs
		  before the conventional size optimization step; this is 